@@ -1318,6 +1318,7 @@ sp-calcite-from-acrocrystal=Calcite from acrocrystal
 sp-calcite-from-acrovoid=Calcite from acrovoid
 sp-calcium-carbonate=Calcium carbonate
 sp-calcium-hydroxide-solution=Calcium hydroxide solution
+sp-capacitor=Capacitor
 sp-capacitor-from-aluminum=Capacitor from aluminum
 sp-capacitor-from-niobium=Capacitor from niobium
 sp-capacitor-from-tantalum=Capacitor from tantalum
@@ -2086,6 +2087,7 @@ sp-tungsten-ore-from-acrocrystal=Tungsten ore from acrocrystal
 sp-tungsten-plate=Tungsten plate
 sp-tungsten-powder=Tungsten powder
 sp-tungsten-steel=Tungsten steel
+sp-turbine-blade=Turbine blade
 sp-turbine-blade-from-stainless-steel=Turbine blade from stainless steel
 sp-turbine-blade-from-titanium-aluminum-tin=Turbine blade from titanium aluminum tin
 sp-turbine-rotor=Turbine rotor
